web api added and views for webapp

--- a/WebSchool/Views/Home/View.cshtml
+++ b/WebSchool/Views/Home/View.cshtml
@@ -1,10 +1,8 @@
 ﻿@model IEnumerable<DomainModel.Classroom>
 
 @{
-    ViewData["Title"] = "Index";
+    Layout = "_MyLayout";
 }
-
-<h1>Index</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
